--- a/wp-content/themes/prostylee-landing-page/style.css
+++ b/wp-content/themes/prostylee-landing-page/style.css
@@ -45,6 +45,82 @@
     height: auto;
     width: 100%; }
 
+#main-wrapper #hot-features {
+  width: 100%;
+  display: block;
+  background-color: #FAF8FE; }
+#main-wrapper #brands-partners {
+  width: 100%;
+  display: flex; }
+  #main-wrapper #brands-partners .partners {
+    clear: both; }
+    #main-wrapper #brands-partners .partners .card {
+      float: left;
+      width: 25%;
+      border: none; }
+      #main-wrapper #brands-partners .partners .card img {
+        width: 6em;
+        height: 3.2em;
+        vertical-align: middle; }
+
+#prostylee-footer-wrapper {
+  background-color: black; }
+  #prostylee-footer-wrapper a {
+    text-decoration: none; }
+  #prostylee-footer-wrapper #bottom-widgets .footer-widget {
+    margin-bottom: 1.5em; }
+    #prostylee-footer-wrapper #bottom-widgets .footer-widget .widget-header {
+      text-transform: uppercase;
+      color: #fff;
+      font-size: 0.9rem; }
+    #prostylee-footer-wrapper #bottom-widgets .footer-widget ul {
+      list-style: none; }
+    #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item {
+      background-color: transparent;
+      padding: 0.2em 0; }
+      #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item a {
+        color: #8B9399;
+        font-size: 0.95rem; }
+    #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials {
+      display: block;
+      list-style: none; }
+      #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li {
+        float: left; }
+        #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li a {
+          color: #fff;
+          display: block;
+          padding: 0.5rem; }
+          #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li a .fab {
+            font-size: 1.2rem; }
+        #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li:first-child a {
+          padding-left: 0; }
+  #prostylee-footer-wrapper #bottom-widgets .contact-widget .address-box p {
+    line-height: 1.5rem;
+    color: #8B9399;
+    font-size: 0.9rem;
+    margin-bottom: 0.4em; }
+  #prostylee-footer-wrapper #bottom-widgets .contact-widget .address-box .fas {
+    display: inline-block;
+    margin-right: 0.3em;
+    font-size: 0.7rem; }
+  #prostylee-footer-wrapper #bottom-widgets .about-widget #footer-logo {
+    padding: 2em 0;
+    box-sizing: border-box; }
+    #prostylee-footer-wrapper #bottom-widgets .about-widget #footer-logo img {
+      margin: 0 auto;
+      vertical-align: middle;
+      display: block; }
+  #prostylee-footer-wrapper #bottom-widgets .about-widget .description {
+    color: #8B9399; }
+  #prostylee-footer-wrapper #copyright-mobile {
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    color: #8B9399;
+    font-size: 0.9rem;
+    padding: 0.5em 0;
+    box-sizing: border-box; }
+
 @media only screen and (max-width: 480px) {
   #prostylee-wrapper #prostylee-header-wrapper #top-navigation #top-bar {
     padding-top: 1em;
@@ -75,7 +151,7 @@
     box-sizing: border-box; }
     #prostylee-wrapper #prostylee-header-wrapper #feature-wrapper .introduction {
       text-align: center;
-      margin-bottom: 4em; }
+      margin-bottom: 3em; }
       #prostylee-wrapper #prostylee-header-wrapper #feature-wrapper .introduction h2.text-title {
         font-weight: bold;
         font-size: 2.8rem;
@@ -92,8 +168,10 @@
       justify-content: center;
       align-items: center;
       display: inline-grid;
-      background: url("../prostylee-landing-page/assets/images/feature_circle.png") top center no-repeat;
-      padding-bottom: 2em; } }
+      background: url("http://192.168.1.13:8080/wordpress/prostylee-landing-page/wp-content/themes/prostylee-landing-page/assets/images/feature_circle.png") top center no-repeat;
+      padding-bottom: 2em; }
+  #prostylee-wrapper #prostylee-footer-wrapper .copyright {
+    display: none; } }
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px; }
