--- a/wp-content/themes/prostylee-landing-page/style.scss
+++ b/wp-content/themes/prostylee-landing-page/style.scss
@@ -18,22 +18,24 @@
     }
   }
 }
-.component {
-  margin: 2em auto;
-  text-align: center;
-}
 .choose-us-section {
+  margin: 3rem auto;
   line-height: 2em;
   .inner-choose-us {
+    padding: 0 2em;
+    box-sizing: border-box;
     .question-text {
       color: #823FFD;
+      font-size: 1.1rem;
+      font-weight: normal;
     }
     .heading {
-      font-size:1.8rem;
       color: #333333;
+      font-size: 2rem !important;
     }
     .description {
       color: #8B9399;
+      line-height: 1.5rem;
     }
   }
   .benefits {
@@ -43,30 +45,101 @@
       padding-left: 0.2em;
       color: #333333;
       font-weight: 500;
-      .icon {
+      .icon-item {
         margin-right: 0.5em;
       }
     }
   }
 }
-.box-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  img {
-    vertical-align: middle;
-    height: auto;
-    width: 100%;
+.component {
+  text-align: center;
+  .box-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em auto;
+    img {
+      vertical-align: middle;
+      height: auto;
+      width: 100%;
+    }
+  }
+  .heading {
+    font-size:1.5rem;
+    color: #333333;
+  }
+  .content {
+    color: #333333;
+  }
+  span.icon {
+    display: block;
+    margin: 1em auto;
   }
 }
 #main-wrapper {
   margin-bottom: 30em;
   #hot-features {
+    padding: 4em 0;
+    box-sizing: border-box;
     width: 100%;
     display: block;
     background-color: #FAF8FE;
+    .hot-header {
+      display: block;
+      text-align: center;
+      padding-bottom: 1em;
+      .hot-note {
+        color: #F46F2F;
+        font-size: 1.1rem;
+        font-weight: normal;
+      }
+      .hot-slogan {
+        font-size: 2rem;
+      }
+    }
+  }
+  #how-to-install {
+    padding: 4em 0;
+    box-sizing: border-box;
+    .box-header {
+      text-align: center;
+      margin-bottom: 2em;
+      .question-text {
+        color: #F46F2F;
+        font-size: 1.1rem;
+        font-weight: normal;
+      }
+      .heading {
+        font-size: 2rem;
+      }
+    }
+    .card {
+      margin-bottom: 1em;
+      border: 1px solid #E9EAEB;
+      box-sizing: border-box;
+      border-radius: 10px;
+      .card-title {
+        font-size: 1.5em;
+        margin-bottom: 0.5em;
+      }
+      .card-text {
+        font-size: 0.95rem;
+        color: #333333;
+      }
+    }
   }
   #brands-partners {
+    .box-header {
+      text-align: center;
+      margin-bottom: 2em;
+      .heading {
+        font-size: 2rem;
+        padding: 0 0.5em;
+      }
+      .partners-count {
+        color: #823FFD;
+      }
+    }
     width: 100%;
     display: flex;
     .partners {
@@ -289,6 +362,13 @@
     #prostylee-footer-wrapper {
       .copyright {
         display: none;
+      }
+    }
+    #main-wrapper {
+      #hot-features {
+        .hot-header {
+
+        }
       }
     }
   }
