--- a/wp-content/themes/prostylee-landing-page/style.css
+++ b/wp-content/themes/prostylee-landing-page/style.css
@@ -13,6 +13,56 @@
         background-color: #451E8C; }
         #prostylee-wrapper #prostylee-header-wrapper #top-navigation #top-bar .site-title {
           display: none; }
+    #prostylee-wrapper #prostylee-header-wrapper #mobile-nav {
+      position: fixed;
+      z-index: 100;
+      left: -100%;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+      background-color: #451E8C;
+      color: #fff;
+      text-align: center; }
+      #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .close-btn {
+        position: absolute;
+        left: 0.5em;
+        top: 1.3em;
+        color: #fff;
+        font-size: 1.2rem; }
+      #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .site-branding {
+        width: 100%;
+        text-align: center; }
+        #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .site-branding .site-logo {
+          padding: 1.3em 0;
+          margin-bottom: 2em; }
+      #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .navbar-nav li a {
+        padding: 0.3em 0;
+        color: #FFFFFF;
+        text-decoration: none;
+        display: block;
+        font-size: 1.5rem; }
+      #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .footer-nav {
+        position: fixed;
+        bottom: 0;
+        left: -100%;
+        width: 100%;
+        display: block;
+        padding: 2em 1em 1em 1em;
+        box-sizing: border-box; }
+        #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .footer-nav .download-box {
+          padding: 1.5em 0;
+          box-sizing: border-box;
+          border: 1px solid rgba(255, 255, 255, 0.1);
+          border-left: none;
+          border-right: none;
+          margin-bottom: 1em; }
+          #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .footer-nav .download-box .text-install {
+            font-size: 0.9rem; }
+        #prostylee-wrapper #prostylee-header-wrapper #mobile-nav .footer-nav .copyright-nav .copyright {
+          text-align: center;
+          color: #8B9399;
+          font-size: 0.9rem; }
 
 .choose-us-section {
   margin: 3rem auto;
@@ -58,6 +108,25 @@
   .component span.icon {
     display: block;
     margin: 1em auto; }
+
+.socials {
+  list-style: none;
+  display: flex;
+  overflow: hidden;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 0;
+  justify-content: center; }
+  .socials li {
+    float: left; }
+    .socials li a {
+      color: #fff;
+      display: block;
+      padding: 0.5rem; }
+      .socials li a .fab {
+        font-size: 1rem; }
+    .socials li:first-child a {
+      padding-left: 0; }
 
 #main-wrapper {
   margin-bottom: 30em; }
@@ -172,25 +241,15 @@
       font-size: 0.9rem; }
     #prostylee-footer-wrapper #bottom-widgets .footer-widget ul {
       list-style: none; }
-    #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item {
-      background-color: transparent;
-      padding: 0.2em 0; }
-      #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item a {
-        color: #8B9399;
-        font-size: 0.95rem; }
-    #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials {
+    #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group {
       display: block;
-      list-style: none; }
-      #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li {
-        float: left; }
-        #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li a {
-          color: #fff;
-          display: block;
-          padding: 0.5rem; }
-          #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li a .fab {
-            font-size: 1.2rem; }
-        #prostylee-footer-wrapper #bottom-widgets .footer-widget .socials li:first-child a {
-          padding-left: 0; }
+      justify-content: left; }
+      #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item {
+        background-color: transparent;
+        padding: 0.2em 0; }
+        #prostylee-footer-wrapper #bottom-widgets .footer-widget .list-group .list-group-item a {
+          color: #8B9399;
+          font-size: 0.95rem; }
   #prostylee-footer-wrapper #bottom-widgets .contact-widget .address-box p {
     line-height: 1.5rem;
     color: #8B9399;
