--- a/wp-content/themes/prostylee-landing-page/style.scss
+++ b/wp-content/themes/prostylee-landing-page/style.scss
@@ -16,6 +16,71 @@
         }
       }
     }
+    #mobile-nav {
+      position: fixed;
+      z-index: 100;
+      left: -100%;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+      background-color: #451E8C;
+      color: #fff;
+      text-align: center;
+      .close-btn {
+        position: absolute;
+        left: 0.5em;
+        top: 1.3em;
+        color: #fff;
+        font-size: 1.2rem;
+      }
+      .site-branding {
+        width: 100%;
+        text-align: center;
+        .site-logo {
+          padding: 1.3em 0;
+          margin-bottom: 2em;
+        }
+      }
+      .navbar-nav {
+        li {
+          a {
+            padding: 0.3em 0;
+            color: #FFFFFF;
+            text-decoration: none;
+            display: block;
+            font-size: 1.5rem;
+          }
+        }
+      }
+      .footer-nav {
+        position: fixed;
+        bottom: 0;
+        left: -100%;
+        width: 100%;
+        display: block;
+        padding: 2em 1em 1em 1em;
+        box-sizing: border-box;
+        .download-box {
+          padding: 1.5em 0;
+          box-sizing: border-box;
+          border: 1px solid rgba(255, 255, 255, 0.1);
+          border-left: none;
+          border-right: none;
+          margin-bottom: 1em;
+          .text-install {
+            font-size: 0.9rem;
+          }
+        }
+        .copyright-nav {
+          .copyright {
+            text-align: center;
+            color: #8B9399;
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
   }
 }
 .choose-us-section {
@@ -74,6 +139,29 @@
   span.icon {
     display: block;
     margin: 1em auto;
+  }
+}
+.socials {
+  list-style: none;
+  display: flex;
+  overflow: hidden;
+  margin-bottom: 0;
+  width: 100%;
+  padding: 0;
+  justify-content: center;
+  li {
+    float: left;
+    a {
+      color: #fff;
+      display: block;
+      padding: 0.5rem;
+      .fab {
+        font-size: 1rem;
+      }
+    }
+    &:first-child a {
+      padding-left: 0;
+    }
   }
 }
 #main-wrapper {
@@ -220,30 +308,14 @@
         list-style: none;
       }
       .list-group {
+        display: block;
+        justify-content: left;
         .list-group-item {
           background-color: transparent;
           padding: 0.2em 0;
           a {
             color: #8B9399;
             font-size: 0.95rem;
-          }
-        }
-      }
-      .socials {
-        display: block;
-        list-style: none;
-        li {
-          float: left;
-          a {
-            color: #fff;
-            display: block;
-            padding: 0.5rem;
-            .fab {
-              font-size: 1.2rem;
-            }
-          }
-          &:first-child a {
-            padding-left: 0;
           }
         }
       }
