--- a/wp-content/themes/prostylee-landing-page/style.scss
+++ b/wp-content/themes/prostylee-landing-page/style.scss
@@ -5,12 +5,18 @@
   #prostylee-header-wrapper {
     background-color: #451E8C;
     height: auto;
+    overflow: hidden;
     #top-navigation {
       width: 100%;
       height: auto;
       display: block;
       background-color: #0a5b88;
       margin-bottom: 4em;
+      .fa-bars {
+        &:before {
+        content: "\f0c9";
+        }
+      }
       #top-bar {
         background-color: #451E8C;
         padding: 1em;
@@ -39,6 +45,12 @@
       #top-bar.top-bar-scrolled {
         background-color: #FFFFFF;
         box-shadow: 3px 3px 3px #E5E5E5;
+        .toggle-icon {
+          color: #451E8C;
+          &:before {
+
+          }
+        }
         ul {
           padding-left: 2em;
           li {
@@ -123,12 +135,13 @@
   margin: 3rem auto;
   padding: 2em 0;
   line-height: 2em;
+  text-align: center;
   .inner-choose-us {
     box-sizing: border-box;
     .question-text {
       color: #823FFD;
       font-size: 1.1rem;
-      font-weight: normal;
+      font-weight: 500;
     }
     .heading {
       color: #333333;
@@ -140,9 +153,8 @@
     }
   }
   .using-phone {
-    margin-top: -11em;
     img {
-      width: 80%;
+      width: 100%;
     }
   }
   .benefits {
@@ -156,6 +168,14 @@
         margin-right: 0.5em;
       }
     }
+  }
+}
+.shopping-passion {
+  .section-left {
+    float: right;
+  }
+  .section-right {
+    float: left;
   }
 }
 .component {
@@ -240,11 +260,10 @@
     .inner-banner-box {
       width: 100%;
       height: 100%;
-      right: -1em;
       background-image: url('assets/images/feature_image.png');
       position: absolute;
       background-repeat: no-repeat;
-      background-position-x: 70%;
+      background-position-x: 60%;
     }
   }
 }
@@ -265,10 +284,14 @@
         font-weight: normal;
       }
       .hot-slogan {
-        font-size: 3rem;
-        padding: 0 7em;
+        font-size: 2rem;
         box-sizing: border-box;
       }
+    }
+    .component {
+      text-align: center;
+      padding: 0 0.2em;
+      margin-bottom: 2em;
     }
   }
   #how-to-install {
@@ -302,6 +325,7 @@
     }
   }
   #brands-partners {
+    margin-bottom: 35em;
     .box-header {
       text-align: center;
       margin-bottom: 2em;
@@ -315,6 +339,12 @@
     }
     width: 100%;
     display: flex;
+    .lgx-logo-wrapper {
+      padding: 5px 0;
+      .owl-nav {
+        display: none;
+      }
+    }
     .partners {
       clear: both;
       .card {
@@ -843,7 +873,7 @@
     padding-top: 10em;
   }
   #feature-footer {
-    top: -18%;
+    top: -45%;
     .container {
       .registration-wrapper {
         padding: 2em 4em;
@@ -884,13 +914,16 @@
     }
   }
 }
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 @media only screen and (max-width: 480px){
   #prostylee-wrapper {
     #prostylee-header-wrapper {
       #top-navigation {
         #top-bar {
-          padding-top: 1em;
-          padding-bottom: 1em;
+          padding: 1em 0.3em;
           .navbar-toggler {
             padding-left: 0;
             padding-right: 0;
@@ -922,36 +955,6 @@
           }
         }
       }
-      //#feature-wrapper {
-      //  padding: 1em;
-      //  box-sizing: border-box;
-      //  .introduction {
-      //    text-align: center;
-      //    margin-bottom: 3em;
-      //    h2.text-title {
-      //      font-weight: bold;
-      //      font-size: 2.8rem;
-      //      color: #fff;
-      //      line-height: 3.8rem;
-      //      padding: 0.3em 0;
-      //    }
-      //    .text-focus {
-      //      color: #F94F7E;
-      //    }
-      //    .description {
-      //      color: rgba(255, 255, 255, 0.7);
-      //      font-size: 1rem;
-      //      margin-bottom: 2em;
-      //    }
-      //  }
-      //  .banners {
-      //    justify-content: center;
-      //    align-items: center;
-      //    display: inline-grid;
-      //    background: url("assets/images/feature_circle.png") top center no-repeat;
-      //    padding-bottom: 2em;
-      //  }
-      //}
     }
     #prostylee-footer-wrapper {
       .copyright {
@@ -964,6 +967,30 @@
 
         }
       }
+    }
+  }
+  #feature-wrapper {
+    padding: 1em;
+    .introduction {
+      padding: 0;
+      text-align: center;
+      margin-bottom: 5em;
+      h2.text-title {
+        font-weight: 500;
+        font-size: 3rem;
+        line-height: 4.2rem;
+        padding: 0.5rem;
+      }
+    }
+    .banners {
+      justify-content: center;
+      align-items: center;
+      display: inline-grid;
+      background: url("assets/images/feature_circle.png") top center no-repeat;
+      height: 22em;
+      align-items: center;
+      background-size: 100%;
+      padding-bottom: 26em;
     }
   }
   #contact-page {
@@ -1201,13 +1228,129 @@
     }
   }
 }
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
 @media only screen and (min-width: 481px) and (max-width: 768px){
+  #prostylee-wrapper {
+    #prostylee-header-wrapper {
+        #top-navigation {
+          .navbar {
+            .navbar-collapse {
+              display: none !important;
+            }
+          }
+          #top-bar {
+            .navbar-toggler {
+              .toggle-icon {
+                border: 1px solid #0a5b88;
+                width: 100px;
+                height: 100px;
+                display: block;
+                position: relative;
+                &:after {
+                  position: absolute;
+                  content: "*";
+                  width: 10px;
+                  height: 10px;
+                  left: 0;
+                  top: 0;
+                  border: 1px solid #0f0;
+                }
+              }
+            }
+          }
+        }
+    }
+    .component {
+      .col-md-6 {
+        width: 100%;
+      }
+    }
+    #feature-wrapper {
+      background-color: #451E8C;
+      padding: 3em 0;
+      box-sizing: border-box;
+      .introduction {
+        width: 100%;
+        text-align: center;
+        display: block;
+        padding: 0;
+        .text-title {
+          margin-bottom: 0.5em;
+          font-size: 4em;
+        }
+      }
+      .banners {
+        width: 100%;
+        justify-content: center;
+        display: inline-grid;
+        height: 22em;
+        background-position: top center;
+        align-items: center;
+        background-size: 60%;
+        padding-bottom: 30em;
+        .inner-banner-box {
+          background-size: 60%;
+        }
+      }
+    }
+    #main-wrapper {
+      .choose-us-section {
+        .inner-choose-us {
+          width: 100%;
+          margin-bottom: 2em;
+          .question-text {
 
+          }
+          .heading {
+            color: #333333;
+            font-size: 2rem !important;
+          }
+          .description {
+            color: #8B9399;
+            line-height: 1.5rem;
+          }
+        }
+        .using-phone {
+          img {
+            width: 70%;
+          }
+        }
+        .benefits {
+          li {
+            text-align: left;
+            border: 0;
+            padding-left: 0.2em;
+            color: #333333;
+            font-weight: 500;
+            .icon-item {
+              margin-right: 0.5em;
+            }
+          }
+        }
+      }
+      .shopping-passion {
+        .box-image {
+          img {
+            width: 70%;
+          }
+        }
+      }
+      #how-to-install {
+        .card {
+          .card-title {
+            font-size: 1.2em;
+          }
+        }
+      }
+      #brands-partners {
+        margin-bottom: 15em;
+      }
+    }
+    #prostylee-footer-wrapper {
+      #feature-footer {
+        top: -30%;
+      }
+    }
+  }
 }
 @media only screen and (min-width: 769px) and (max-width: 1024px){
   #prostylee-wrapper {
